[workspace.package]
version = "6.3.8"
rust-version = "1.82"
license = "MPL-2.0"
readme = "README.md"
authors = [
  "Luke <luke@ljones.dev>",
  "Denis Benato <benato.denis96@gmail.com>"
]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
description = "Laptop feature control for ASUS ROG laptops and others"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "asusctl",
  "asusd",
  "asus-shutdown",
  "asusd-user",
  "config-traits",
  "dmi-id",
  "rog-platform",
  "rog-dbus",
  "rog-anime",
  "rog-aura",
  "rog-profiles",
  "rog-control-center",
  "rog-slash",
  "simulators",
  "rog-scsi",
]

default-members = ["asusctl", "asusd", "asus-shutdown", "asusd-user", "rog-control-center"]

[workspace.dependencies]
tokio = { version = "^1.39.0", default-features = false, features = [
  "macros",
  "sync",
  "time",
  "rt",
  "rt-multi-thread",
] }
concat-idents = "^1.1"
dirs = "^4.0"
smol = "^2.0"
mio = "0.8.11"

futures-util = "0.3.31"
zbus = "5.13.1"
logind-zbus = { version = "5.2.0" } #, default-features = false, features = ["non_blocking"] }

serde = { version = "^1.0", features = ["serde_derive"] }
ron = "*"

log = "^0.4"
env_logger = "^0.10.0"

glam = { version = "^0.22", features = ["serde"] }
gumdrop = "^0.8"
udev = { version = "^0.8", features = ["mio"] }
rusb = "^0.9"
inotify = "^0.10"

png_pong = "^0.8"
pix = "^0.13"
tinybmp = "^0.4"
gif = "^0.12"

versions = "6.2"

notify-rust = { version = "4.11.5", features = ["z", "async"] }

sg = { git = "https://github.com/flukejones/sg-rs.git" }

# NOTE: `lto = "thin"` is used because fat LTO's monolithic, largely
# single-threaded link phase is the critical path of this workspace's build.
# Profiled on a 16-core machine (clean build of all 5 default binaries, with
# the `lld` linker from .cargo/config.toml):
#   fat LTO:   rog-control-center link ~362s, total build 8m53s (534s)
#   thin LTO:  rog-control-center link  ~82s, total build 4m35s (276s)  ~1.9x faster
# The rog-control-center binary pulls in slint + femtovg + wayland + image, so
# its link dominates; thin LTO parallelizes that final step across cores.
#
# Reference asusd binary size: thin ~= 9.8M, fat ~= 6.4M. If minimal binary
# size is required for a distro tarball, build with `cargo build --profile dist`
# (see [profile.dist] below).
[profile.release]
lto = "thin"
debug = false
opt-level = 3
panic = "abort"

# Maximum size optimization for release/distribution tarballs. Slower to build,
# smallest binaries. Use via `cargo build --profile dist` (outputs to
# target/dist/) or `make TARGET=dist` style overrides.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
# codegen-units = 1

[profile.dev.package."*"]
opt-level = 1
# codegen-units = 1

[profile.bench]
debug = false
opt-level = 3

[workspace.dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
